this version works !

--- a/index.html
+++ b/index.html
@@ -12,16 +12,20 @@
 
     <div id='container'>
         <div id='videopanel'>
-            <video id='preview'controls></video>
+            <video id='preview' controls></video>
         </div>
         <div id='settingspanel'>                
-            <input value='select a file' type="file" id="inputVideo">
+            <input value='select a file' type="file" id="inputvideo">
             <button onclick="runUpload()">UPLOAD</button>
             <button onclick="runFFmpeg()">RUN FFMPEG</button>
         </div>
-        <div id='timelinepanel'></div>
-            <div id='timeline'></div>
-        <div id='exportpanel'></div>
+        <div id='timelinepanel'>
+            <div id='timeline'>
+        </div>
+        </div>
+        <div id='exportpanel'>
+
+        </div>
     </div>
 </body>
 </html>
